Bulk merge from lotus-stable -> GIT for vmidentity (1) TC installation (2) native IDM (3) OIDC client refactoring (4) all others except for STS CAC/SecureID support
Change-Id: I5b45e661720ac94b86f36d57c8d1e20326f14ce5